[project]
name = "rdap-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litestar[standard]>=2.24.0",
    "pydantic-settings>=2.14.1",
    "redis>=5",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
serve = "rdap_proxy.main:serve"
dev = "rdap_proxy.main:dev"
test = "rdap_proxy.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

